---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2025-12-26
  Changes:
    - fds_recipe.split_ingredient: now accepts tables with entries with a specified ratio, with the syntax ["item-name"]=split_factor
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2025-12-26
  Features:
    - fds_recipe and fds_technology functions can now work directly on a table
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2025-12-20
  Changes:
    - fds_recipe.get_ingredient: now returns nil,nil instead
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-12-20
  Features:
    - Add new fds_recipe function: split_ingredient
  Changes:
    - fds_recipe.get_ingredient: now returns 0,nil if the ingredient does not exist (so that table.pack(...)[2] is possible for inline use)
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2025-11-20
  Changes:
    - Add fds_recipe.scale_ingredients for scaling ALL ingredients that have the given properties to be scaled
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2025-11-18
  Changes:
    - Add fds_technology.add_effect for technology effects of any kind (does not check for duplicates)
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2025-06-19
  Bugfixes:
    - replace_ingredient and replace_result didn't actually remove the old element when the new ingredient already exists