@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.4
 Date: ????
-  Changes:
+  Bugfixes:
+    - fds_recipe.remove_ingredient: Broken by 0.3.2, now works again
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.3
 Date: 2025-12-26
